# ComfyUI-RMAutomation

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
data/: styles.json
js/: rm_lora_apply.js  rm_make_image_batch.js  rm_mask_combine.js  rm_multi_detect_crop.js  rm_power_lora_loader.js  rm_styles_editor.js  rm_styles_full.js
nodes/: face_detailer.py  image_fallback.py  latent_nodes.py  make_image_batch.py  mask_combine.py  mask_denoise_remap.py  mask_gate.py  math_expression.py  multi_detect_crop.py  power_lora_loader.py  progress_reporter.py  save_image_with_metadata.py  styles_full.py  styles_pipe.py  text_embed.py  video_combine.py
video_formats/: h264-mp4.json  h265-mp4.json  webm-vp9.json
